spade-tests/src/snapshots/spade_tests__typeinference__reading_from_port_members_is_a_type_error.snap
---
source: spade-tests/src/typeinference.rs
expression: "std::str::from_utf8(buffer.as_slice()).expect(\"error contains invalid utf-8\")"
---
error: Field access on &mut A which is not a struct
   ┌─ testinput:13:28
   │
13 │     let x = inst read_port(val.x);
   │                            ^^^^^ Expected struct, found &mut A


